--- a/ansible/admin/setup/dependencies.yml
+++ b/ansible/admin/setup/dependencies.yml
@@ -21,3 +21,7 @@
         - gcc
         - git
         - aria2
+        - nginx
+        - certbot
+        - python3-certbot-nginx
+        - openssl
