feat: nginx docs

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,7 @@ export ADMIN_KEY_PATH=~/.ssh/hetzner/admin
 export INVENTORY_PATH=./hosts/hetzner/krondor-ax41-nvme
 # What user you want to run scripts against when using a user or service
 export USER=user
+# What domain to use for exposing up web services. This one is mine
+export DOMAIN=cloud.krondor.org
+# What email to use for publishing on web service certs. This one is mine
+export EMAIL=al@krondor.org
