--- a/ansible/admin/create.yml
+++ b/ansible/admin/create.yml
@@ -1,7 +1,7 @@
 # Create a new Admin user on the host
 # Allows to configure:
-# - username
 # - ssh pub key
+# TODO: allow configuring the admin name
 # The specified user will be created if it does not exist
 # Its permissions will be updated if they are different
 # The specified ssh pub key will be added to the user's authorized_keys
@@ -28,7 +28,7 @@
     - name: Create the admin user if it does not exist
       become: yes
       user:
-        name: "{{ user_name }}"
+        name: admin
         groups: admin
         append: yes
         state: present
@@ -40,36 +40,35 @@
         state: present
         regexp: "^%admin ALL=(ALL) NOPASSWD: ALL"
 
-    - name: Get the users ssh pub key from the control machine
+    - name: Get the admin's ssh pub key from the control machine
       set_fact:
-        user_ssh_pub_key: "{{ lookup('file', '{{ user_ssh_pub_key_path }}') }}"
-      when: user_ssh_pub_key_path is defined
-    - name: Make sure the user has a .ssh directory
+        user_ssh_pub_key: "{{ lookup('file', '{{ admin_ssh_pub_key_path }}') }}"
+      when: admin_ssh_pub_key_path is defined
+    - name: Make sure the user has an authorized keys directory
       become: yes
       file:
-        path: /home/{{ user_name }}/.ssh
+        path: "/etc/ssh/authorized/admin/"
         state: directory
-        owner: "{{ user_name }}"
-        group: "{{ user_name }}"
+        owner: admin
+        group: admin
         mode: '0700'
-    - name: Make sure the user has an authorized_keys file
+    - name: Make sure the admin user has an authorized_keys file
       become: yes
       file:
-        path: /home/{{ user_name }}/.ssh/authorized_keys
+        path: "/etc/ssh/authorized/admin/authorized_keys"
         state: touch
-        owner: "{{ user_name }}"
-        group: "{{ user_name }}"
+        owner: admin
+        group: admin
         mode: '0600'
     - name: Add the user's ssh pub key
       become: yes
       lineinfile:
-        path: /home/{{ user_name }}/.ssh/authorized_keys
-        line: "{{ user_ssh_pub_key }}"
+        path: "/etc/ssh/authorized/admin/authorized_keys"
+        line: "{{ admin_ssh_pub_key }}"
         state: present
-        regexp: "^{{ user_ssh_pub_key }}"
-      when: user_ssh_pub_key is defined
+        regexp: "^{{ admin_ssh_pub_key }}"
+      when: admin_ssh_pub_key is defined
 
-    # TODO: maybe this should be split out into another playbook
     # Lock the door on your way out. When run as root, this will disable root login
     #  BE VERY SURE YOU ARE INLUDING A VALID PUB KEY FOR THE USER YOU ARE CREATING
     - name: Disable root login
@@ -79,6 +78,14 @@
         line: "PermitRootLogin no"
         state: present
         regexp: "^PermitRootLogin"
+      when: is_root
+    - name: Update where authorized keys are stored
+      become: yes
+      lineinfile:
+          path: /etc/ssh/sshd_config
+          line: "AuthorizedKeysFile     /etc/ssh/authorized/%u/authorized_keys /etc/ssh/authorized/%u/authorized_keys2"
+          state: present
+          regexp: "^AuthorizedKeysFile"
       when: is_root
     - name: Disable password login
       become: yes
