--- a/ansible/admin/utils/create_user.yml
+++ b/ansible/admin/utils/create_user.yml
@@ -22,7 +22,7 @@
     - name: Create the user
       become: yes
       user:
-        name: "{{ name }}"
+        name: "{{ user_name }}"
         password: "{{ password }}"
         shell: /bin/bash
         update_password: always
@@ -31,36 +31,35 @@
       become: yes
       copy:
         content: "{{ password }}"
-        dest: /home/{{ name }}/{{ name }}.password
+        dest: /home/{{ user_name }}/{{ user_name }}.password
         mode: '0600'
-        owner: "{{ name }}"
-        group: "{{ name }}"
+        owner: "{{ user_name }}"
+        group: "{{ user_name }}"
 
-    # TODO: implement safer ssh configuration
     - name: Get the admin user's ssh pub key
       become: yes
-      shell: "cat /home/admin/.ssh/authorized_keys"
+      shell: "cat /etc/ssh/authorized/admin/authorized_keys"
       register: admin_ssh_pub_key
     - name: Make sure the user has a .ssh directory
       become: yes
       file:
-        path: /home/{{ name }}/.ssh
+        path: "/etc/ssh/authorized/{{ user_name }}/"
         state: directory
-        owner: "{{ name }}"
-        group: "{{ name }}"
+        owner: "{{ user_name }}"
+        group: "{{ user_name }}"
         mode: '0700'
     - name: Make sure the user has an authorized_keys file
       become: yes
       file:
-        path: /home/{{ name }}/.ssh/authorized_keys
+        path: "/etc/ssh/authorized/{{ user_name }}/authorized_keys"
         state: touch
-        owner: "{{ name }}"
-        group: "{{ name }}"
+        owner: "{{ user_name }}"
+        group: "{{ user_name }}"
         mode: '0600'
     - name: Add the admin's ssh pub key
       become: yes
       lineinfile:
-        path: /home/{{ name }}/.ssh/authorized_keys
+        path: "/etc/ssh/authorized/{{ user_name }}/authorized_keys"
         line: "{{ admin_ssh_pub_key.stdout }}"
         state: present
         regexp: "^{{ admin_ssh_pub_key.stdout | regex_escape() }}"
@@ -68,7 +67,7 @@
     - name: Add the user's ssh pub key
       become: yes
       lineinfile:
-        path: /home/{{ user_name }}/.ssh/authorized_keys
+        path: "/etc/ssh/authorized/{{ user_name }}/authorized_keys"
         line: "{{ user_ssh_pub_key }}"
         state: present
         regexp: "^{{ user_ssh_pub_key | regex_escape() }}"
