--- a/ansible/admin/nginx/ssl.tasks.yml
+++ b/ansible/admin/nginx/ssl.tasks.yml
@@ -4,9 +4,16 @@
       - "Creating SSL Cert for {{ target_domain }}"
       - "Admin Email: {{ email }}"
 
+- name: Check if the SSL certificate already exists
+  become: yes
+  stat:
+    path: "/etc/letsencrypt/live/{{ target_domain }}/fullchain.pem"
+  register: ssl_cert_stat
+
 - name: Generate Let's Encrypt certificate
   become: yes
   shell: certbot --nginx -d {{ target_domain }} --non-interactive --agree-tos -m {{ email }}
+  when: ssl_cert_stat.stat.exists == False
 
 # 0 12 * * * /usr/bin/certbot renew --quiet
 - name: Add a cronn job to auto renew certificates if one doesn't already exist
@@ -16,3 +23,4 @@
     minute: 0
     hour: 12
     job: /user/bin/certbot renew --quiet
+  when: ssl_cert_stat.stat.exists == False
