feat: telegram bot

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,10 @@ export USER=user
 export DOMAIN=cloud.krondor.org
 # What email to use for publishing on web service certs. This one is mine
 export EMAIL=al@krondor.org
+
+# TODO: this is a super way to keep track of secrets and set them up on the host
+#  but it's what I got for now. I'm going to have to figure out a better way to do this
+# Service Secrets
+
+# Token for our telegram bot
+export TG_TOKEN=123456
