--- a/ansible/admin/ipfs.yml
+++ b/ansible/admin/ipfs.yml
@@ -1,6 +1,4 @@
-# Setup the host to run web services over HTTPS
-# email: email to publish as admin
-# domain: root domain to associate with our services
+# Start our IPFS service on the host
 - hosts: all
   name: Run Ipfs
   tasks:
