fix: migrate to krondor.org

--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,6 @@ export INVENTORY_PATH=./hosts/hetzner/krondor-ax41-nvme
 # What user you want to run scripts against when using a user or service
 export USER=user
 # What domain to use for exposing up web services. This one is mine
-export DOMAIN=cloud.krondor.org
+export DOMAIN=krondor.org
 # What email to use for publishing on web service certs. This one is mine
 export EMAIL=al@krondor.org
