--- a/ansible/admin/nginx/ssl.tasks.yml
+++ b/ansible/admin/nginx/ssl.tasks.yml
@@ -30,7 +30,7 @@
 - name: Generate Let's Encrypt certificate
   become: yes
   shell: certbot --nginx -d {{ target_domain }} --non-interactive --agree-tos -m {{ email }}
-  when: ssl_cert_stat.stat.exists == False
+  # when: ssl_cert_stat.stat.exists == False
 
 # 0 12 * * * /usr/bin/certbot renew --quiet
 - name: Add a cronn job to auto renew certificates if one doesn't already exist
