--- a/ansible/admin/firewall.yml
+++ b/ansible/admin/firewall.yml
@@ -88,6 +88,12 @@
         proto: tcp
         port: '5001'
 
+    - name: Allow udp over port 5002
+      ufw:
+        rule: allow
+        proto: udp
+        port: '5002'
+
     # Enable the firewall
     - name: Enable the firewall
       ufw:
