--- a/ansible/admin/nginx/tasks.yml
+++ b/ansible/admin/nginx/tasks.yml
@@ -82,6 +82,27 @@
     target_domain: "ipfs.{{ domain }}"
     email: "{{ email }}"
 
+# Ollama 
+
+- name: Setup server block
+  become: yes
+  template:
+    src: ./ollama.config.j2
+    dest: "/etc/nginx/sites-available/ollama.{{ domain }}"
+
+- name: Enable the server block
+  become: yes
+  file:
+    src: "/etc/nginx/sites-available/ollama.{{ domain }}"
+    dest: "/etc/nginx/sites-enabled/ollama.{{ domain }}"
+    state: link
+
+- name: Setup domain SSL certificate
+  import_tasks: ./ssl.tasks.yml
+  vars:
+    target_domain: "ollama.{{ domain }}"
+    email: "{{ email }}"
+
 - name: Restart Nginx
   become: yes
   service:
