--- a/ansible/admin/dependencies.yml
+++ b/ansible/admin/dependencies.yml
@@ -8,7 +8,7 @@
         name: "*"
         state: latest
         force_apt_get: true
-    - name: Install Dependencies
+    - name: Install Apt Dependencies
       become: yes
       apt:
         name: "{{ item }}"
@@ -27,3 +27,5 @@
         - apache2-utils
         - python3
         - python3-pip
+        - podman
+        - curl
