--- a/ansible/admin/dependencies.yml
+++ b/ansible/admin/dependencies.yml
@@ -27,5 +27,7 @@
         - apache2-utils
         - python3
         - python3-pip
+        # NOTE: docker.io registries won't be available until you 
+        #  set the registries in /etc/containers/registries.conf
         - podman
         - curl
